<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#49006e"
    tools:context=".Messages">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginTop="45dp"
        android:text="@string/o_que_enviar"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_comida"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:text="@string/comida"
        app:layout_constraintEnd_toStartOf="@+id/button_banheiro"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_falar"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/falar_com_vc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_banheiro" />

    <Button
        android:id="@+id/button_agua"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/agua"
        app:layout_constraintEnd_toStartOf="@+id/button_falar"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_comida" />

    <Button
        android:id="@+id/button_emergencia"
        android:layout_width="384dp"
        android:layout_height="66dp"
        android:layout_marginTop="328dp"
        android:text="@string/sos"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_banheiro"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="156dp"
        android:text="@string/banheiro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</android.support.constraint.ConstraintLayout>