<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactsActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        android:text="@string/quem_enviarSMSM"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_rafael"
        android:layout_width="0dp"
        android:layout_height="101dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/Rafael"
        app:layout_constraintBottom_toTopOf="@+id/button_pai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ajudante" />

    <Button
        android:id="@+id/button_pai"
        android:layout_width="0dp"
        android:layout_height="101dp"
        android:layout_marginTop="15dp"
        android:text="@string/Pai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rafael" />

    <Button
        android:id="@+id/button_ajudante"
        android:layout_width="0dp"
        android:layout_height="101dp"
        android:layout_marginTop="40dp"
        android:text="@string/ajudante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>