<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginTop="100dp"
        android:text="@string/o_que_enviar"
        android:textSize="35sp"
        android:textStyle="bold"
        android:background="#49006e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_agua"
        android:layout_width="0dp"
        android:layout_height="164dp"
        android:layout_marginBottom="100dp"
        android:background="#f4750e"
        android:text="@string/agua"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/change_message2"
        android:layout_width="195dp"
        android:layout_height="59dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="92dp"
        android:background="#f4750e"
        android:text="@string/next_msg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>